--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "start": "node src/app.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.26.1",
+    "express": "^4.17.3"
+  }
 }
